fix timeline scss on mobile.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -715,8 +715,8 @@ footer ul li {
     left: 50%;
     content: ' ';
     display: block;
-    width: 12px;
-    height: 12px;
+    width: 18px;
+    height: 18px;
     margin-left: -9px;
     background: #fff;
     border-radius: 10px;
